--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Rigelrain/PledgeBot.git"
+    "url": "git+https://github.com/Rigelrain/manna-bot.git"
   },
   "keywords": [
     "discord",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "discord.js": "^12.2.0",
+    "glob": "^7.1.6",
     "mongoose": "^5.9.20"
   }
 }
